Fix invisible text on primary button (hover)

--- a/browser/css/device-desktop.css
+++ b/browser/css/device-desktop.css
@@ -36,4 +36,5 @@ button:not(.ui-corner-all):not(.button-primary):hover {
 
 .button-primary:hover {
 	background-color: var(--color-primary-lighter);
+	color: var(--color-primary-dark);
 }
